<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/WalkingDescription"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:autoSizeTextType="uniform"
        android:text="Walking emits no CO2 and can be a great way to explroe your surroundings and discover new things."
        app:layout_constraintBottom_toBottomOf="@+id/Walking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/Walking"
        app:layout_constraintTop_toTopOf="@+id/Walking"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ScanResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/scan_results"
        app:layout_constraintBottom_toBottomOf="@+id/Bus"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/Bus"
        android:layout_width="292dp"
        android:layout_height="161dp"
        android:background="#F1F1F1"
        android:paddingLeft="50dp"
        android:paddingTop="45dp"
        android:paddingRight="50dp"
        android:paddingBottom="45dp"
        android:src="@drawable/ic_baseline_directions_bus_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="131dp"
        android:layout_height="26dp"
        android:text="@string/you_scanned_a_bus"
        app:layout_constraintBottom_toBottomOf="@+id/Bus"
        app:layout_constraintEnd_toEndOf="@+id/Bus"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="@+id/Bus"
        app:layout_constraintTop_toTopOf="@+id/Bus"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="254dp"
        android:layout_height="38dp"
        android:autoSizeTextType="uniform"
        android:text="@string/a_bus_emits_14_lbs_of_co2_per_100_passenger_miles_a_84_decrease_compared_to_cars"
        app:layout_constraintBottom_toBottomOf="@+id/Bus"
        app:layout_constraintEnd_toEndOf="@+id/Bus"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/Bus"
        app:layout_constraintTop_toTopOf="@+id/Bus"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/OtherAlternatives"
        android:layout_width="157dp"
        android:layout_height="19dp"
        android:text="Other Alternatives"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="58dp"
        android:src="@drawable/ic_baseline_pedal_bike_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <TextView
        android:id="@+id/Bicycles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bicycles"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/BicycleDescription"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:autoSizeTextType="uniform"
        android:text="Bicycles emit no CO2 per passenger mile and can be a great alternative to any form of transportation"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/Walking"
        android:layout_width="70dp"
        android:layout_height="58dp"
        android:src="@drawable/ic_baseline_directions_walk_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:text="Walking"
        app:layout_constraintBottom_toTopOf="@+id/Walking"
        app:layout_constraintEnd_toEndOf="@+id/Walking"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Walking"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="58dp"
        android:src="@drawable/ic_baseline_directions_car_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/Carpool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carpool"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="241dp"
        android:layout_height="51dp"
        android:autoSizeTextType="uniform"
        android:text="The CO2 emissions per passenger mile can vary greatly depending on passenger count but for situations where public transit is not availible it can be a good alternative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <Button
        android:id="@+id/GoHome"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:text="Go Home"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <Button
        android:id="@+id/ScanAgain"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="92dp"
        android:text="Scan Again"
        app:layout_constraintBottom_toBottomOf="@+id/GoHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/GoHome"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>